# groundskeeper-py

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/commit/agents/: openai.yml
.claude/skills/commit/: SKILL.md
.codex/: config.toml
docs/: ARCHITECTURE.md  ROADMAP.md
src/gk/: __init__.py  audit.py  cli.py  inventory.py  models.py  report.py
src/gk/scanners/: __init__.py  base.py  cache.py
tests/: test_cache_scanner.py  test_finding.py  test_inventory.py
