[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "groundskeeper-py"
version = "0.1.0"
description = "Conservative Linux home-directory health and audit tool."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [
  { name = "groundsKeeper contributors" },
]
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
gk = "gk.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
